[package]
name = "pumpfun_new_mint"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
spl-token = "4.0"
spl-token-2022 = "1.0"
spl-associated-token-account = "2.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
solana-cli-output = "1.18"
once_cell = "1.19"
base64 = "0.21"  # Add this

[dev-dependencies]
rand = "0.8"

[[example]]
name = "create_token"
path = "examples/create_token.rs"