[package]
name = "yellowstone-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yellowstone-watcher"
path = "src/main.rs"

[dependencies]
# Yellowstone gRPC client
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto  = "12.3.0"

# Async runtime
tokio          = { version = "1", features = ["full"] }

# gRPC / tonic
tonic          = { version = "0.14", features = ["tls-native-roots"] }

# Logging / config
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
dotenvy            = "0.15"
futures            = "0.3"
bs58               = "0.5"
rustls             = { version = "0.23", default-features = false, features = ["ring"] }
