[package]
name = "yellowstone-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yellowstone-watcher"
path = "src/main.rs"

[dependencies]
# Yellowstone gRPC client
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto  = "12.3.0"

# Solana RPC + SDK
solana-client             = "2.3"
solana-sdk                = "2.3"
solana-transaction-status = "2.3"

# Async runtime
tokio          = { version = "1", features = ["full"] }

# gRPC / tonic
tonic          = { version = "0.14", features = ["tls-native-roots"] }

# Serialization / logging / config
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "1"
anyhow          = "1"
dotenvy         = "0.15"
dashmap         = "6"
futures         = "0.3"
bs58            = "0.5"
reqwest         = { version = "0.11", features = ["json"] }
