[package]
name = "rabbitstream-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bs58 = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
yellowstone-grpc-client = "5"
yellowstone-grpc-proto = "5"

[patch.crates-io]
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v5.0.1+solana.2.1.21" }
yellowstone-grpc-proto  = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v5.0.1+solana.2.1.21" }
